<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/gradientbackground">

    <ImageView
        android:id="@+id/L_img_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingTop="30dp"
        android:src="@drawable/tastetrip"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/L_image_description"
        />

    <ImageView
        android:id="@+id/L_img_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/L_img_1"
        android:paddingTop="130dp"
        android:src="@drawable/gambar2"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/L_image_description2"
        />

    <LinearLayout
        android:id="@+id/L_ly_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="20dp"
        android:orientation="vertical"
        android:layout_below="@id/L_img_2"
        android:gravity="center">


        <EditText
            android:id="@+id/L_edt_email"
            android:layout_width="350dp"
            android:layout_height="57dp"
            android:background="@drawable/button_shape"
            android:hint="@string/L_hint_1"
            android:gravity="center"
            android:fontFamily="@font/karmamedium"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress"
            />

        <EditText
            android:id="@+id/L_edt_pass"
            android:layout_width="350dp"
            android:layout_height="57dp"
            android:background="@drawable/button_shape"
            android:layout_marginTop="15dp"
            android:hint="@string/L_hint_2"
            android:gravity="center"
            android:fontFamily="@font/karmamedium"
            android:autofillHints="password"
            android:inputType="textPassword"
            />

    </LinearLayout>

    <Button
        android:id="@+id/L_btn_1"
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:text="@string/L_txt1"
        android:textColor="@color/black"
        android:fontFamily="@font/karmabold"
        android:textSize="18sp"
        android:layout_below="@id/L_ly_1"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_shape"
        android:width="300dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/L_btn_1"
        android:gravity="center"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/L_txt2"
            android:textSize="12sp"
            android:paddingTop="1dp"
            android:fontFamily="@font/karmasemibold"
            />

        <TextView
            android:id="@+id/txt_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/L_txt3"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:fontFamily="@font/karmabold"
            android:padding="3dp"
            />

    </LinearLayout>

</RelativeLayout>