<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity"
    android:background="@drawable/gradientbackground">


    <ImageView
        android:id="@+id/M_img_1"
        android:layout_width="370dp"
        android:layout_height="290dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:src="@drawable/gradientbackground2"
        android:scaleType="fitCenter"
        android:contentDescription="@string/image_description2"
        />

    <ImageButton
        android:id="@+id/M_imagebutton_camera"
        android:layout_width="335dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:layout_centerInParent="true"
        android:layout_below="@id/M_img_1"
        android:src="@drawable/camera"
        android:background="@drawable/button_shape"
        android:contentDescription="@string/M_image_button_description"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/M_imagebutton_camera"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/M_text_description"
            android:layout_width="360dp"
            android:layout_height="320dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_shape2"
            android:gravity="center_horizontal"
            android:text="@string/deskripsi_makanan_akan_muncul_disini"
            android:fontFamily="@font/karmasemibold"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:paddingTop="10dp"
            android:paddingHorizontal="10dp"/>

    </LinearLayout>

</RelativeLayout>